--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
 .header
 	min-height: 680px
-	background: url(/img/bg.png) center (center/cover) no-repeat
+	background: url(./img/bg.png) center (center/cover) no-repeat
 	&__wrapper
 		display: flex
 		justify-content: space-between
