castomization @media Sass

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -104,9 +104,9 @@
 				background: #fff
 	&__items
 		display: flex
-		justify-content: space-between
-		width: 262px
-		
+		justify-content: space-around
+		//max-width: 262px
+	&__item
 	&__img
 		display: flex
 		justify-content: center
