--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,7 +3,11 @@
 .container
 	max-width: 1140px
 	margin: 0 auto
+	padding: 0 10px
 	
 
 @import 'blocks/header'
 @import 'blocks/promo'
+
+@import 'blocks/media'
+
