--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -105,8 +105,6 @@
 	&__items
 		display: flex
 		justify-content: space-around
-		//max-width: 262px
-	&__item
 	&__img
 		display: flex
 		justify-content: center
@@ -120,7 +118,7 @@
 		text-align: center
 		color: #fff
 .bottom__btn	
-	display: block
+	display: inline-block
 	width: 230px
 	height: 57px
 	position: relative
