add section agent

--- a/src/sass/blocks/_benefist.sass
+++ b/src/sass/blocks/_benefist.sass
@@ -1,4 +1,5 @@
 .benefist
+	display: none
 	padding: 57px 0 51px 0
 	background-color: #f3f3f3
 	&__big-title
@@ -8,6 +9,7 @@
 		letter-spacing: normal
 		text-align: center
 		color: #2e2e2e
+		text-transform: uppercase
 	&__wrapper
 		margin-top: 31px
 		display: flex
