--- a/src/sass/blocks/_work.sass
+++ b/src/sass/blocks/_work.sass
@@ -1,14 +1,7 @@
 .work
-	display: block
 	background-color: #fff
 	padding: 51px 0 57px 0
 	&__title
-		font-size: 26px
-		font-weight: bold
-		line-height: 0.88
-		text-align: center
-		color: #2e2e2e
-		text-transform: uppercase
 		margin-bottom: 20px
 	&__line
 		display: block
@@ -27,11 +20,11 @@
 		color: #2e2e2e
 	&__wrapper
 		display: flex
-		justify-content: center
+		justify-content: space-between
 		align-items: flex-start
 	&__item
 		max-width: 359px
-		margin: 37px 15px 0
+		margin: 37px 0
 	&__item-img	
 		margin-bottom: 28px
 	&__item-title 
