--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,12 +3,13 @@
 .container
 	max-width: 1140px
 	margin: 0 auto
-	padding: 0 10px
+	//padding: 0 10px добавить при media
 	
 
 @import 'blocks/header'
 @import 'blocks/benefist'
 @import 'blocks/work'
+@import 'blocks/agent'
 
 
 @import 'blocks/promo'
