--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,7 +1,9 @@
 .header
 	display: none
+	max-width: 1920px	
 	min-height: 680px
 	background: url(../img/bg.png) center (center/cover) no-repeat
+	margin: 0 auto
 	&__wrapper
 		display: flex
 		justify-content: space-between
