--- a/src/sass/base/_null.sass
+++ b/src/sass/base/_null.sass
@@ -1,6 +1,6 @@
 //общее 
 //<Шрифт по умолчанию>==========================================================================================
-$fontFamily: ""
+$fontFamily: "Roboto Condensed, sans-serif"
 $fontSize: 16
 //</Шрифт по умолчанию>==========================================================================================
 
