--- a/src/sass/blocks/_agent.sass
+++ b/src/sass/blocks/_agent.sass
@@ -20,7 +20,9 @@
 		text-align: center
 		color: #fff
 	&__subtitle
+		max-width: 984px		
 		font-size: 19px
+		margin: 0 auto
 		font-weight: 300
 		line-height: 1.42
 		text-align: center
