--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -107,7 +107,7 @@
 				background: #fff
 	&__items
 		display: flex
-		justify-content: space-around
+		max-width: 262px
 	&__img
 		display: flex
 		justify-content: center
