--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,9 +1,15 @@
 @import 'base/null'
 
+*
+	font-family: "Roboto Condensed"
+
+
 .container
 	max-width: 1140px
 	margin: 0 auto
 	//padding: 0 10px добавить при media
+
+	
 	
 
 @import 'blocks/header'
