add section consultation

--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -3,7 +3,7 @@
 	&__wrapper
 		display: flex
 		justify-content: space-between
-		align-items: start
+		align-items: flex-start
 		flex-wrap: wrap
 		padding: 32px 0 56px 0
 	&__item
