--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,6 +18,7 @@
 @import 'blocks/agent'
 @import 'blocks/price'
 @import 'blocks/consultation'
+@import 'blocks/manager'
 
 
 @import 'blocks/promo'
