--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -19,6 +19,7 @@
 @import 'blocks/price'
 @import 'blocks/consultation'
 @import 'blocks/manager'
+@import 'blocks/scheme'
 
 
 @import 'blocks/promo'
