--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -20,6 +20,7 @@
 @import 'blocks/consultation'
 @import 'blocks/manager'
 @import 'blocks/scheme'
+@import 'blocks/carousel'
 
 
 @import 'blocks/promo'
