--- a/src/sass/blocks/_benefist.sass
+++ b/src/sass/blocks/_benefist.sass
@@ -1,5 +1,7 @@
 .benefist
-	display: none
+	//display: none
+	max-width: 1920px
+	margin: 0 auto
 	padding: 57px 0 51px 0
 	background-color: #f3f3f3
 	&__big-title
