--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,5 +1,5 @@
 .header
-	display: none
+	//display: none
 	max-width: 1920px	
 	min-height: 680px
 	background: url(../img/bg.png) center (center/cover) no-repeat
@@ -107,6 +107,10 @@
 				background: #fff
 	&__items
 		display: flex
+		justify-content: center
+		align-items: center
+		flex-wrap: wrap
+	&__item
 		max-width: 262px
 	&__img
 		display: flex
