--- a/src/sass/blocks/_work.sass
+++ b/src/sass/blocks/_work.sass
@@ -1,5 +1,5 @@
 .work
-	display: none
+	//display: none
 	background-color: #fff
 	padding: 51px 0 57px 0
 	&__title
@@ -21,11 +21,12 @@
 		color: #2e2e2e
 	&__wrapper
 		display: flex
-		justify-content: space-between
+		justify-content: center
 		align-items: flex-start
+		flex-wrap: wrap
 	&__item
 		max-width: 359px
-		margin: 37px 0
+		margin: 37px 10px
 	&__item-img	
 		margin-bottom: 28px
 	&__item-title 
