--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -21,6 +21,8 @@
 @import 'blocks/manager'
 @import 'blocks/scheme'
 @import 'blocks/carousel'
+@import 'blocks/question'
+@import 'blocks/modal'
 
 
 @import 'blocks/promo'
