--- a/src/sass/blocks/_carousel.sass
+++ b/src/sass/blocks/_carousel.sass
@@ -1,6 +1,9 @@
 .carousel
+	max-width: 1920px
+	margin: 0 auto
 	padding: 51px 0 65px 0
 	&__inner
+		max-width: 1920px
 		display: flex
 		justify-content: center
 		align-items: center
@@ -29,6 +32,8 @@
 .slick-prev, .slick-next 
 	background-color: #fff
 .slick-prev
+	padding: 100px
+.slick-next
 	padding: 100px
 	
   
