--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -1,17 +1,20 @@
 .price
-	display: none
+	//display: none
 	padding: 54px 0 56px 0
 	&__wrapper
 		display: flex
-		justify-content: space-between
-		align-items: flex-start
+		justify-content: center
+		align-items: self-start
 		flex-wrap: wrap
 		padding: 32px 0 56px 0
 	&__item
 		border: 1px solid #e9e9e9
 		padding: 1px
 		max-width: 265px	
+		min-height: 100px
+
 		overflow: hidden
+		margin: 10px
 	&__item-title
 		padding: 24px
 		background-color: #25333c
