add section map/ add footer

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,6 +23,8 @@
 @import 'blocks/carousel'
 @import 'blocks/question'
 @import 'blocks/modal'
+@import 'blocks/map'
+@import 'blocks/footer'
 
 
 @import 'blocks/promo'
